<resources>
    <string name="app_name">ChatBluetooth</string>
    <string name="title_activity_user" translatable="false">ChatBluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="action_user">UserMenu</string>

    <!-- HINTS -->
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm">Confirm password</string>
    <string name="birth">I was born in&#8230;</string>
    <string name="male" translatable="false">M</string>
    <string name="female" translatable="false">F</string>
    <string name="state">Invisible</string>
    <string name="hint_nick_mod">New nickname</string>

    <!-- BUTTONS -->
    <string name="login_btn">Login</string>
    <string name="signup_btn">Or Sign Up</string>
    <string name="register_btn">Or Sign Up</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>

    <!-- TOASTS -->
    <string name="login_greeting">Welcome,&#160;</string>
    <string name="registration_btn">Sign Up</string>

    <!-- ITEM -->
    <string name="setting_mod_image">Modify profile image</string>
    <string name="setting_mod_nick">Modify username</string>
    <string name="setting_mod_age">Modify birth date</string>
    <string name="setting_mod_country">Modify country</string>
    <string name="setting_mod_gender">Modify gender</string>

    <!-- ACTION BAR TITLES -->
    <string name="profile_activity">Profile</string>
    <string name="setting_activity">Settings</string>
    <string name="history_activity">History</string>
    <string name="reg_frag">Sign up</string>
    <string name="list_frag">Users list</string>
    <string name="favorites">Favorites list</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <string name="title_activity_history" translatable="false">HistoryActivity</string>


    <string name="more_history">Tap for more&#8230;</string>
    <string name="history_btn">Search All</string>
    <string name="in_message">In messages</string>
    <string name="in_user">username</string>
    <string name="all">All</string>
    <string name="spy">Spy Mode</string>
    <string name="log_out" translatable="false">Log Out</string>

    <string name="you">You</string>
    <string name="country">I\'m from&#8230;</string>

    <string name="from">From&#160;</string>
    <string name="age">Age&#160;</string>

    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="contact_list">Contact List</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="today_at">Today at&#160;</string>
    <string name="yesterday_at">Yesterday at&#160;</string>
    <string name="this_">This&#160;</string>
    <string name="at">at&#160;</string>
    <string name="on_">On&#160;</string>
    <string name="yesterday">Yesterday</string>
    <string name="unknown">Unknown</string>
    <string name="login">Login</string>
    <string name="must_register">You must first sign up!</string>
    <string name="wrong">Wrong username or password!</string>
    <string name="confirm_pass">Confirm password!</string>
    <string name="check_fields">Check username and password!</string>
    <string name="already_registered">You are already registered!</string>
    <string name="updated">Profile updated</string>
    <string name="received">Received&#160;</string>
    <string name="sent">Sent&#160;</string>


</resources>
