<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegistrationFragment">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/regName"
            android:singleLine="false"
            android:backgroundTint="@color/text"
            android:layout_alignParentStart="true"
            android:hint="@string/username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPass"
            android:layout_below="@+id/regName"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:backgroundTint="@color/text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regConfirmPass"
            android:hint="@string/confirm"
            android:backgroundTint="@color/text"
            android:layout_below="@+id/regPass"
            android:layout_alignStart="@+id/regPass" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn"
            android:id="@+id/regButton"
            android:background="@drawable/ripple_button"
            android:elevation="@dimen/elevation_low"
            android:stateListAnimator="@anim/button_elevation"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/regDate"
            android:layout_below="@+id/regConfirmPass"
            android:backgroundTint="@color/text"
            android:layout_alignParentStart="true"
            android:hint="@string/birth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/text"
                android:buttonTint="@color/primary"
                android:id="@+id/radioButton"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/text"
                android:buttonTint="@color/primary"
                android:id="@+id/radioButton2" />
        </RadioGroup>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/nation"
            android:backgroundTint="@color/primary"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:spinnerMode="dialog" />

    </RelativeLayout>
</FrameLayout>