<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/logName"
            android:singleLine="false"
            android:cursorVisible="true"
            android:backgroundTint="@color/secondary"
            android:hint="@string/username"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textCursorDrawable="@drawable/edit_cursor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/logPass"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:backgroundTint="@color/secondary"
            android:layout_below="@+id/logName"
            android:layout_alignParentStart="true"
            android:textCursorDrawable="@drawable/edit_cursor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:id="@+id/loginButton"
            android:background="@drawable/ripple_button"
            android:elevation="@dimen/elevation_low"
            android:stateListAnimator="@anim/button_elevation"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            style="@style/MyButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn"
            android:id="@+id/logRegButton"
            android:background="@drawable/ripple_button"
            android:elevation="@dimen/elevation_low"
            android:stateListAnimator="@anim/button_elevation"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/loginButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp" />

    </RelativeLayout>
</FrameLayout>