<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.christian.chatbluetooth.view.Fragments.HistoryFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSuggestion"
            android:textColor="@color/accent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etHistory" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/historyGroup"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_message"
                android:id="@+id/in_message"
                android:checked="true"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_user"
                android:id="@+id/in_user" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:id="@+id/all"/>

        </RadioGroup>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_btn"
            android:layout_marginTop="8dp"
            android:id="@+id/btnHistory" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cboxAll"
            android:layout_marginEnd="8dp"
            android:layout_gravity="right" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listHistory"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/delete"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/accent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:fab_colorPressed="@color/accent"
        app:fab_colorRipple="@color/light_primary"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"/>

</FrameLayout>
