<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/nav_container">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/accent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_drawer"
                android:layout_width="match_parent"
                android:layout_height="180dp">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_alignBottom="@+id/image_drawer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_drawer"
                    android:textColor="@color/light_primary"/>
            </LinearLayout>
        </RelativeLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_menu"
            android:layout_marginTop="8dp">

        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:id="@+id/switch_layout">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_switch"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_state"
                android:checked="false"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true"
                android:hint="@string/state"
                android:backgroundTint="@color/light_primary"
                android:textColorHint="@color/background"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/spy_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_spy"
                android:background="@drawable/spy"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_spy"
                android:checked="false"
                android:layout_marginLeft="72dp"
                android:layout_centerVertical="true"
                android:hint="@string/spy"
                android:backgroundTint="@color/light_primary"
                android:textColorHint="@color/background"
                />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:textColor="@color/light_primary"
            android:text="@string/log_out"
            android:id="@+id/btn_logout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>